--- a/test/1.html
+++ b/test/1.html
@@ -7,5 +7,6 @@
 <a href="2.html"><img alt="2" src="2.jpg"></a>
 <a href="3.html"><img alt="3" src="3.jpg"></a>
 <a href="4.html"><img alt="4" src="4.jpg"></a>
+fewafwea
 </body>
 </html>
